fix: исправлены замечания